# uestc-client

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: async_wechat_login.rs  blocking_wechat_login.rs
src/: client.rs  core.rs  lib.rs
src/client/: async_impl.rs  blocking_impl.rs
src/core/: crypto.rs  parser.rs  wechat.rs
tests/: bedroom_query_integration.rs
