[package]
name = "uestc-client"
version = "0.2.0"
edition = "2024"
license = "GPL-3.0"
authors = ["kasuha07 <me@kasuha.com>"]
repository = "https://github.com/kasuha07/uestc-client"
description = "A minimal reqwest client for UESTC."

[features]
default = ["async"]
async = ["dep:tokio"]
blocking = ["reqwest/blocking"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "http2", "system-proxy", "default-tls"] }
tokio = { version = "1", features = ["full"], optional = true }
thiserror = "2"
scraper = "0.24"
aes = "0.8"
cbc = "0.1"
base64 = "0.22"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cookie_store = "0.22"
reqwest_cookie_store = "0.9"
